--- a/nodepop/package.json
+++ b/nodepop/package.json
@@ -1,13 +1,14 @@
 {
   "name": "nodepop",
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "app.js",
   "type": "module",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+  "directories": {
+    "lib": "lib"
   },
-  "keywords": [],
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "author": "",
   "license": "ISC",
   "description": "",
