--- a/nodepop/package.json
+++ b/nodepop/package.json
@@ -16,7 +16,10 @@
   "dependencies": {
     "cross-env": "^7.0.3",
     "debug": "^4.3.7",
+    "ejs": "^3.1.10",
     "express": "^4.21.1",
+    "http-errors": "^2.0.0",
+    "morgan": "^1.10.0",
     "nodemon": "^3.1.7"
   }
 }
