Creamos el loginController y el login.ejs

--- a/nodepop/package.json
+++ b/nodepop/package.json
@@ -9,12 +9,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "star": " cross-env NODEPOP_ENV=production node server.js",
-    "dev": "cross-env DEBUG=nodepop:* NODEPOP_ENV=development nodemon server.js"
+    "dev": "cross-env DEBUG=nodepop:* NODEPOP_ENV=development nodemon server.js",
+    "initDB": "node initDB.js"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cross-env": "^7.0.3",
     "debug": "^4.3.7",
     "ejs": "^3.1.10",
