--- a/nodepop/package.json
+++ b/nodepop/package.json
@@ -21,6 +21,7 @@
     "debug": "^4.3.7",
     "ejs": "^3.1.10",
     "express": "^4.21.1",
+    "express-session": "^1.18.1",
     "express-validator": "^7.2.0",
     "http-errors": "^2.0.0",
     "mongoose": "^8.8.0",
